Fix bug 208601: DocumentViewerImpl::GetCanGetContents() was incorrectly returning false for text fields, because it was looking at the document's selection, rather than the text field selection. Fix by exposing nsIPresShell::GetSelectionForCopy(), and calling that. This fixes the Services menu in Camino to work in text fields. r/sr=roc.